--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "tailwind.config.js",
   "scripts": {
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
-    "prettier": "npx prettier --write **/*.html"
+    "prettier": "npx prettier --write ./src/*.html"
   },
   "repository": {
     "type": "git",
